✨ Ajout d'un bandeau bleu en haut de la page
- Ajout d'un bandeau d'accueil avec icône et version
- Design moderne avec fond bleu dégradé
- Message de bienvenue pour ZogChat P2P
- Positionnement fixe en haut de la page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <!-- Bandeau bleu en haut -->
+    <div class="top-banner">
+        <div class="banner-content">
+            <span class="banner-icon">🌟</span>
+            <span class="banner-text">Bienvenue sur ZogChat - Communication P2P sécurisée</span>
+            <span class="banner-version">v2.0</span>
+        </div>
+    </div>
+    
     <!-- Sélecteur de thème -->
     <div class="theme-selector">
         <button id="theme-warcraft" class="active">⚔ Warcraft</button>
