Correction interface partage + cache busting + debug

--- a/index.html
+++ b/index.html
@@ -424,7 +424,6 @@
     </div>
 
     <!-- JavaScript modulaire optimisé -->
-    <script type="module" src="js/minimal.js"></script>
+    <script type="module" src="js/minimal.js?v=2.0"></script>
 </body>
-</html>
 </html>
