Fix v2.2.2: alignement messages envoyés à droite

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         .message.sent .message-content {
             background: linear-gradient(135deg, rgb(59 130 246), rgb(37 99 235));
             color: white;
-            text-align: left;
+            text-align: right;
             border-bottom-right-radius: 0.375rem;
             box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
         }
@@ -461,10 +461,10 @@
     
     <!-- Indicateur de version discret -->
     <div class="fixed bottom-2 left-2 text-xs text-slate-400 dark:text-slate-600 font-mono opacity-50 hover:opacity-100 transition-opacity cursor-help select-none" id="version-info" title="Informations de version">
-        <span id="app-version">v2.2.1</span> • <span id="build-date">Loading...</span>
+        <span id="app-version">v2.2.2</span> • <span id="build-date">Loading...</span>
     </div>
 
     <!-- JavaScript modulaire optimisé -->
-    <script type="module" src="js/minimal.js?v=2.2.1"></script>
+    <script type="module" src="js/minimal.js?v=2.2.2"></script>
 </body>
 </html>
