--- a/index.html
+++ b/index.html
@@ -469,11 +469,11 @@
     </div>
     
     <!-- Indicateur de version discret -->
-    <div class="fixed bottom-2 left-2 text-xs text-slate-400 dark:text-slate-600 font-mono opacity-50 hover:opacity-100 transition-opacity cursor-help select-none" id="version-info" title="Informations de version">
-        <span id="app-version">v2.8.0</span> • <span id="build-date">Loading...</span>
+    <div class="fixed bottom-2 left-2 text-xs text-slate-400 dark:text-slate-600 font-mono opacity-50 hover:opacity-100 transition-opacity cursor-pointer select-none" id="version-info" title="Cliquez pour une surprise !">
+        <span id="app-version">v2.9.0</span>
     </div>
 
     <!-- JavaScript modulaire optimisé -->
-    <script type="module" src="js/minimal.js?v=2.8.0&t=1757792412"></script>
+    <script type="module" src="js/minimal.js?v=2.9.0&t=1757792412"></script>
 </body>
 </html>
