--- a/index.html
+++ b/index.html
@@ -468,8 +468,8 @@
         <button id="music-toggle" class="w-10 h-10 md:w-12 md:h-12 rounded-full bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-600 text-lg hover:bg-blue-600 hover:text-white hover:-translate-y-1 transition-all duration-200 shadow-md hover:shadow-lg opacity-50" title="Musique">🎵</button>
     </div>
     
-    <!-- Indicateur de version discret -->
-    <div class="fixed bottom-2 left-2 text-xs text-slate-400 dark:text-slate-600 font-mono opacity-50 hover:opacity-100 transition-opacity cursor-pointer select-none" id="version-info" title="Cliquez pour une surprise !">
+    <!-- Indicateur de version -->
+    <div class="fixed bottom-4 left-4 text-sm text-slate-500 dark:text-slate-400 font-mono opacity-70 hover:opacity-100 hover:scale-110 transition-all duration-200 cursor-pointer select-none bg-white/80 dark:bg-slate-800/80 backdrop-blur-sm px-2 py-1 rounded-lg border border-slate-200/50 dark:border-slate-600/50 shadow-sm" id="version-info" title="Cliquez pour une surprise ! 🎉">
         <span id="app-version">v2.9.0</span>
     </div>
 
