--- a/index.html
+++ b/index.html
@@ -328,6 +328,16 @@
                         <label for="username-input" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">Votre nom</label>
                         <input type="text" id="username-input" class="w-full p-3 border border-slate-200 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-900 text-slate-900 dark:text-slate-100 text-base focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all min-h-[48px]" placeholder="Entrez votre nom..." maxlength="30">
                     </div>
+                    <div id="recipient-field" class="hidden">
+                        <label for="recipient-input" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">
+                            <span class="flex items-center gap-2">
+                                🔒 Nom du destinataire (sécurité renforcée)
+                                <span class="text-xs text-slate-500 dark:text-slate-400 font-normal">optionnel</span>
+                            </span>
+                        </label>
+                        <input type="text" id="recipient-input" class="w-full p-3 border border-slate-200 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-900 text-slate-900 dark:text-slate-100 text-base focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-green-500 transition-all min-h-[48px]" placeholder="Nom de la personne attendue..." maxlength="30">
+                        <p class="text-xs text-slate-500 dark:text-slate-400 mt-1">Si renseigné, seule cette personne pourra se connecter</p>
+                    </div>
                     <button id="create-session-btn" class="w-full px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 disabled:opacity-50 disabled:cursor-not-allowed transition-colors min-h-[48px] font-medium" disabled>
                         Créer ma session
                     </button>
@@ -468,7 +478,7 @@
         <button id="music-toggle" class="w-10 h-10 md:w-12 md:h-12 rounded-full bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-600 text-lg hover:bg-blue-600 hover:text-white hover:-translate-y-1 transition-all duration-200 shadow-md hover:shadow-lg opacity-50" title="Musique">🎵</button>
     </div>
     
-    <!-- Indicateur de version -->
+Si     <!-- Indicateur de version -->
     <div class="fixed bottom-4 left-4 text-sm text-slate-500 dark:text-slate-400 font-mono opacity-70 hover:opacity-100 hover:scale-110 transition-all duration-200 cursor-pointer select-none bg-white/80 dark:bg-slate-800/80 backdrop-blur-sm px-2 py-1 rounded-lg border border-slate-200/50 dark:border-slate-600/50 shadow-sm" id="version-info" title="Cliquez pour une surprise ! 🎉">
         <span id="app-version">v2.9.0</span>
     </div>
