Fix v2.10.5: Correction email + thème sombre fonctionnel

--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
             <span class="text-sm text-slate-600 dark:text-slate-400 hidden sm:inline">Communication P2P sécurisée</span>
             <div class="ml-auto flex items-center gap-2">
                 <div class="hidden md:flex gap-1">
-                    <button id="theme-light" class="px-3 py-2 text-sm border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors bg-blue-600 text-white" title="Thème clair">☀️</button>
-                    <button id="theme-dark" class="px-3 py-2 text-sm border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors" title="Thème sombre">🌙</button>
-                    <button id="theme-auto" class="px-3 py-2 text-sm border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors" title="Thème automatique">🔄</button>
+                    <button id="theme-light" class="theme-btn px-3 py-2 text-sm border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors bg-blue-600 text-white" title="Thème clair">☀️</button>
+                    <button id="theme-dark" class="theme-btn px-3 py-2 text-sm border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors" title="Thème sombre">🌙</button>
+                    <button id="theme-auto" class="theme-btn px-3 py-2 text-sm border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors" title="Thème automatique">🔄</button>
                 </div>
                 <button class="md:hidden p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" id="mobile-menu-btn" title="Menu">☰</button>
             </div>
