--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    <title>ZogChat - Communication P2P</title>
+    <title>QuantumChat - Communication P2P</title>
     
     <!-- PeerJS CDN -->
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
@@ -280,7 +280,7 @@
     <!-- Header compact qui se réduit après connexion -->
     <header class="bg-slate-50 dark:bg-slate-800 border-b border-slate-200 dark:border-slate-700 sticky top-0 z-50 backdrop-blur-sm transition-all duration-300" id="main-header">
         <div class="max-w-4xl mx-auto px-4 py-6 flex items-center gap-6">
-            <h1 class="text-2xl font-semibold text-blue-600 dark:text-blue-400">ZogChat</h1>
+            <h1 class="text-2xl font-semibold text-blue-600 dark:text-blue-400">QuantumChat</h1>
             <span class="text-sm text-slate-600 dark:text-slate-400 hidden sm:inline">Communication P2P sécurisée</span>
             <div class="ml-auto flex items-center gap-2">
                 <button class="md:hidden p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" id="mobile-menu-btn" title="Menu">☰</button>
@@ -306,7 +306,7 @@
             <section class="bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-lg p-8 md:p-6 shadow-sm hover:shadow-md transition-all duration-300" id="username-section">
                 <div class="text-center mb-6">
                     <div class="text-4xl mb-4">👋</div>
-                    <h2 class="text-xl font-semibold text-slate-900 dark:text-slate-100 mb-2">Bienvenue sur ZogChat</h2>
+                    <h2 class="text-xl font-semibold text-slate-900 dark:text-slate-100 mb-2">Bienvenue sur QuantumChat</h2>
                     <p class="text-slate-600 dark:text-slate-400">Commencez par vous présenter</p>
                 </div>
                 
