--- a/index.html
+++ b/index.html
@@ -287,6 +287,15 @@
             max-height: calc(100vh - 300px);
         }
         
+        /* Style personnalisé pour les messages envoyés */
+        .message.sent .message-content {
+            background: linear-gradient(135deg, rgb(59 130 246), rgb(37 99 235));
+            color: white;
+            text-align: right;
+            border-bottom-right-radius: 0.375rem;
+            box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
+        }
+        
         /* Force cache refresh v2.2.5 - Retrait justify-content conflictuel */
     </style> 
 </head>
