Fix v2.13.3: Correction couleur messages - utilisation de #212D43 au lieu du bleu vif

--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
         
         /* Style personnalisé pour les messages envoyés */
         .message.sent .message-content {
-            background: linear-gradient(135deg, rgb(59 130 246), rgb(37 99 235));
-            color: white;
+            background: #212d43 !important;
+            color: white !important;
             text-align: right;
             border-bottom-right-radius: 0.375rem;
-            box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
+            box-shadow: 0 2px 8px rgba(33, 45, 67, 0.3);
         }
         
         /* Force cache refresh v2.2.5 - Retrait justify-content conflictuel */
