--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <!-- Section chat (prend toute la place après connexion) -->
         <section class="flex flex-col flex-1 min-h-0 hidden" id="chat-section">
             <!-- Header du chat -->
-            <div class="bg-slate-50/95 dark:bg-slate-800/95 border border-slate-200 dark:border-slate-700 rounded-t-lg p-2 md:p-4 shadow-sm backdrop-blur-sm">
+            <div class="bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-t-lg p-2 md:p-4 shadow-sm">
                 <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-2">
                     <h2 class="text-lg font-semibold text-slate-900 dark:text-slate-100">
                         <span class="hidden md:inline">Conversation</span>
@@ -418,7 +418,7 @@
             </div>
             
             <!-- Zone de messages -->
-            <div class="flex-1 overflow-y-auto p-4 bg-gradient-to-b from-slate-50/50 to-white dark:from-slate-900/50 dark:to-slate-900 border-l border-r border-slate-200 dark:border-slate-600 min-h-0 relative" id="chat-container">
+            <div class="flex-1 overflow-y-auto p-4 bg-white dark:bg-slate-900 border-l border-r border-slate-200 dark:border-slate-600 min-h-0 relative" id="chat-container">
                 <!-- Indicateur de frappe -->
                 <div class="hidden items-center gap-2 mb-4 opacity-75" id="typing-indicator">
                     <div class="flex gap-1">
@@ -444,7 +444,7 @@
                 </div>
             
             <!-- Barre de saisie sticky -->
-            <div class="bg-white/95 dark:bg-slate-900/95 backdrop-blur-sm border-t border-slate-200 dark:border-slate-700 p-3 md:p-4 sticky bottom-0 z-10">
+            <div class="bg-white dark:bg-slate-900 border-t border-slate-200 dark:border-slate-700 p-3 md:p-4 sticky bottom-0 z-10">
                 <div class="flex items-end gap-3 max-w-4xl mx-auto">
                     <div class="flex-1 relative">
                         <input type="text" id="message-input" class="w-full p-3 pr-12 border border-slate-300 dark:border-slate-600 rounded-2xl bg-slate-50 dark:bg-slate-800 text-slate-900 dark:text-slate-100 text-base focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition-all min-h-[48px] resize-none" placeholder="Tapez votre message..." rows="1">
