--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
             <h1 class="text-2xl font-semibold text-primary-800 dark:text-primary-400">QChat</h1>
             <span class="text-sm text-slate-600 dark:text-slate-400 hidden sm:inline">Communication P2P sécurisée</span>
             <div class="ml-auto flex items-center gap-2">
+                <button id="theme-toggle" class="hidden md:flex p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] items-center justify-center" title="Basculer le thème">🌙</button>
                 <button id="sound-toggle" class="hidden md:flex p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] items-center justify-center" title="Sons">🔊</button>
                 <button class="md:hidden p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" id="mobile-menu-btn" title="Menu">☰</button>
             </div>
@@ -323,6 +324,12 @@
         <!-- Menu mobile -->
         <div class="hidden absolute top-full left-0 right-0 bg-slate-50 dark:bg-slate-800 border-b border-slate-200 dark:border-slate-700 shadow-lg z-40" id="mobile-menu">
             <div class="p-4 flex flex-col gap-4">
+                <div class="flex flex-col gap-2">
+                    <span class="text-sm font-medium text-slate-600 dark:text-slate-400">Thème :</span>
+                    <button id="mobile-theme-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center">
+                        🌙
+                    </button>
+                </div>
                 <div class="flex flex-col gap-2">
                     <span class="text-sm font-medium text-slate-600 dark:text-slate-400">Audio :</span>
                     <button id="mobile-sound-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center">
