Fix v2.15.2: Anthracite foncé forcé sur body en mode sombre

--- a/index.html
+++ b/index.html
@@ -305,9 +305,14 @@
             background: #1e293b !important;
         }
         
-        /* Background général en mode sombre */
+        /* Background général en mode sombre - anthracite foncé */
         .dark body {
-            background: #0f172a !important;
+            background-color: #1e293b !important;
+            background-image: url('quarks-wave.png') !important;
+            background-repeat: no-repeat !important;
+            background-position: left center !important;
+            background-attachment: fixed !important;
+            background-size: auto 100vh !important;
         }
         
         /* Force cache refresh v2.2.5 - Retrait justify-content conflictuel */
