Design v2.15.4: Background noir pour body en mode sombre

--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
             background: #1e293b !important;
         }
         
-        /* Background général en mode sombre - anthracite foncé */
+        /* Background général en mode sombre - noir */
         .dark body {
-            background-color: #1e293b !important;
+            background-color: black !important;
             background-image: url('quarks-wave.png') !important;
             background-repeat: no-repeat !important;
             background-position: left center !important;
