Fix v2.15.6: Alignement timestamps messages envoyés à droite

--- a/index.html
+++ b/index.html
@@ -296,6 +296,12 @@
             box-shadow: 0 2px 8px rgba(33, 45, 67, 0.3);
         }
         
+        /* Alignement des timestamps pour messages envoyés */
+        .message.sent .message-time {
+            text-align: right;
+            margin-left: auto;
+        }
+        
         /* Forcer l'opacité complète du chat */
         #chat-section {
             background: white !important;
