UX v2.19.0: Barre titre responsive - affichage nom interlocuteur uniquement

--- a/index.html
+++ b/index.html
@@ -328,8 +328,11 @@
     <!-- Header compact qui se réduit après connexion -->
     <header class="bg-slate-50/90 dark:bg-slate-900/95 border-b border-slate-200 dark:border-slate-700 sticky top-0 z-50 backdrop-blur-sm transition-all duration-300" id="main-header">
         <div class="max-w-4xl mx-auto px-4 py-6 flex items-center gap-6">
-            <h1 class="text-2xl font-semibold text-primary-800 dark:text-primary-400">QChat</h1>
+            <h1 class="text-2xl font-semibold text-primary-800 dark:text-primary-400 hidden sm:block">QChat</h1>
             <span class="text-sm text-slate-600 dark:text-slate-400 hidden sm:inline">Communication P2P sécurisée</span>
+            <div id="peer-name-mobile" class="text-xl font-semibold text-primary-800 dark:text-primary-400 sm:hidden hidden">
+                <!-- Nom de l'interlocuteur en mobile -->
+            </div>
             <div class="ml-auto flex items-center gap-2">
                 <button id="sound-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Sons">🔊</button>
                 <button id="theme-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Basculer le thème">🌙</button>
