UX v2.20.0: Messages de partage personnalisés avec nom utilisateur et destinataire

--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
             <section class="bg-slate-50/95 dark:bg-slate-800/95 border border-slate-200 dark:border-slate-700 rounded-lg p-8 md:p-6 shadow-sm hover:shadow-md transition-all duration-300 backdrop-blur-sm hidden" id="share-section">
                 <div class="text-center mb-6">
                     <div class="text-4xl mb-4">🔗</div>
-                    <h2 class="text-xl font-semibold text-slate-900 dark:text-slate-100 mb-2">Partagez votre session</h2>
-                    <p class="text-slate-600 dark:text-slate-400">Invitez vos contacts à vous rejoindre</p>
+                    <h2 id="share-title" class="text-xl font-semibold text-slate-900 dark:text-slate-100 mb-2">Partagez votre session</h2>
+                    <p id="share-subtitle" class="text-slate-600 dark:text-slate-400">Invitez vos contacts à vous rejoindre</p>
                 </div>
                 
                 <div class="max-w-md mx-auto space-y-4">
