UI v2.22.0: Ajout arrondis cohérents à la section chat (rounded-lg)

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         </div>
         
         <!-- Section chat (prend toute la place après connexion) -->
-        <section class="flex flex-col flex-1 min-h-0 hidden bg-white dark:bg-slate-900" id="chat-section">
+        <section class="flex flex-col flex-1 min-h-0 hidden bg-white dark:bg-slate-900 rounded-lg overflow-hidden" id="chat-section">
             <!-- Header du chat -->
             <div class="bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-t-lg p-2 md:p-4 shadow-sm">
                 <div class="flex justify-between items-center">
@@ -457,7 +457,7 @@
                 </div>
             
             <!-- Barre de saisie sticky -->
-            <div class="bg-white dark:bg-slate-900 border-t border-slate-200 dark:border-slate-700 p-3 md:p-4 sticky bottom-0 z-10">
+            <div class="bg-white dark:bg-slate-900 border-t border-slate-200 dark:border-slate-700 p-3 md:p-4 sticky bottom-0 z-10 rounded-b-lg">
                 <div class="flex items-end gap-3 max-w-4xl mx-auto">
                     <div class="flex-1 relative">
                         <input type="text" id="message-input" class="w-full p-3 pr-12 border border-slate-300 dark:border-slate-600 rounded-2xl bg-slate-50 dark:bg-slate-800 text-slate-900 dark:text-slate-100 text-base focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition-all min-h-[48px] resize-none" placeholder="Tapez votre message..." rows="1">
