--- a/index.html
+++ b/index.html
@@ -330,17 +330,26 @@
             const savedTheme = localStorage.getItem('qchat-theme');
             const isDark = savedTheme ? savedTheme === 'dark' : true; // Mode sombre par défaut
             
-            if (isDark) {
-                document.documentElement.classList.add('dark');
-                document.body.style.setProperty('background-color', 'black', 'important');
+            // Attendre que le body soit disponible
+            if (document.body) {
+                applyTheme();
             } else {
-                document.documentElement.classList.remove('dark');
-                document.body.style.setProperty('background-color', 'white', 'important');
+                document.addEventListener('DOMContentLoaded', applyTheme);
+            }
+            
+            function applyTheme() {
+                if (isDark) {
+                    document.body.classList.add('dark');
+                    document.body.style.setProperty('background-color', 'black', 'important');
+                } else {
+                    document.body.classList.remove('dark');
+                    document.body.style.setProperty('background-color', 'white', 'important');
+                }
             }
         })();
     </script>
 </head>
-<body class="dark bg-white dark:bg-slate-950 text-slate-900 dark:text-slate-100 font-sans transition-colors duration-300" style="background-image: url('quarks-wave.png'); background-repeat: no-repeat; background-position: left center; background-attachment: fixed; background-size: auto 100vh; background-color: black !important;">
+<body class="bg-white dark:bg-slate-950 text-slate-900 dark:text-slate-100 font-sans transition-colors duration-300" style="background-image: url('quarks-wave.png'); background-repeat: no-repeat; background-position: left center; background-attachment: fixed; background-size: auto 100vh;">
     <!-- Header compact qui se réduit après connexion -->
     <header class="bg-slate-50/90 dark:bg-slate-900/95 border-b border-slate-200 dark:border-slate-700 sticky top-0 z-50 backdrop-blur-sm transition-all duration-300" id="main-header">
         <div class="max-w-4xl mx-auto px-4 py-6 flex items-center gap-6">
