Clean v2.25.0: Suppression easter egg numéro de version - interface plus sobre

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     
     
     <!-- Indicateur de version -->
-    <div class="fixed bottom-4 left-4 text-sm text-slate-500 dark:text-slate-400 font-mono opacity-70 hover:opacity-100 hover:scale-110 transition-all duration-200 cursor-pointer select-none bg-white/80 dark:bg-slate-800/80 backdrop-blur-sm px-2 py-1 rounded-lg border border-slate-200/50 dark:border-slate-600/50 shadow-sm" id="version-info" title="Cliquez pour une surprise ! 🎉">
+    <div class="fixed bottom-4 left-4 text-sm text-slate-500 dark:text-slate-400 font-mono opacity-70 select-none bg-white/80 dark:bg-slate-800/80 backdrop-blur-sm px-2 py-1 rounded-lg border border-slate-200/50 dark:border-slate-600/50 shadow-sm" id="version-info">
         <span id="app-version">v2.9.0</span>
     </div>
 
