--- a/index.html
+++ b/index.html
@@ -476,11 +476,18 @@
             <!-- Header du chat -->
             <div class="bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-t-lg p-2 md:p-4 shadow-sm">
                 <div class="flex justify-between items-center">
-                    <h2 class="text-lg font-semibold text-slate-900 dark:text-slate-100 flex items-center gap-2">
-                        <span class="hidden md:inline">Conversation</span>
-                        <span id="chat-peer-name-mobile" class="md:hidden">Conversation</span>
-                        <span id="connection-status" class="text-sm transition-all duration-300" title="Statut de connexion">🔴</span>
-                    </h2>
+                    <div class="flex flex-col">
+                        <h2 class="text-lg font-semibold text-slate-900 dark:text-slate-100 flex items-center gap-2">
+                            <span class="hidden md:inline">Conversation</span>
+                            <span id="chat-peer-name-mobile" class="md:hidden">Conversation</span>
+                            <span id="connection-status" class="text-sm transition-all duration-300" title="Statut de connexion">🔴</span>
+                        </h2>
+                        <div class="text-xs text-slate-500 dark:text-slate-400 flex items-center gap-2">
+                            <span id="user-role" class="font-medium">Utilisateur</span>
+                            <span>•</span>
+                            <span id="user-name">Non connecté</span>
+                        </div>
+                    </div>
                     <button id="disconnect-btn" class="px-3 py-1 md:px-4 md:py-2 bg-slate-200 dark:bg-slate-700 text-slate-900 dark:text-slate-100 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-600 transition-colors text-sm">
                         Déconnecter
                     </button>
