--- a/index.html
+++ b/index.html
@@ -383,13 +383,23 @@
 <body class="bg-white dark:bg-slate-950 text-slate-900 dark:text-slate-100 font-sans transition-colors duration-300" style="background-image: url('quarks-wave.png'); background-repeat: no-repeat; background-position: left center; background-attachment: fixed; background-size: auto 100vh;">
     <!-- Header compact qui se réduit après connexion -->
     <header class="bg-slate-50/90 dark:bg-slate-900/95 border-b border-slate-200 dark:border-slate-700 sticky top-0 z-50 backdrop-blur-sm transition-all duration-300" id="main-header">
-        <div class="max-w-4xl mx-auto px-4 py-6 flex items-center gap-6">
-            <h1 class="text-2xl font-semibold text-primary-800 dark:text-primary-400">QChat</h1>
-            <span class="text-sm text-slate-600 dark:text-slate-400 hidden sm:inline">Communication P2P sécurisée</span>
-            <div class="ml-auto flex items-center gap-2">
+        <div class="max-w-4xl mx-auto px-4 py-6">
+            <div class="flex items-center gap-6">
+                <h1 class="text-2xl font-semibold text-primary-800 dark:text-primary-400">QChat</h1>
+                <span class="text-sm text-slate-600 dark:text-slate-400 hidden sm:inline">Communication P2P sécurisée</span>
+                <div class="ml-auto flex items-center gap-2">
                 <button id="sound-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Sons">🔊</button>
                 <button id="theme-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Basculer le thème">🌙</button>
-    </div>
+                </div>
+            </div>
+            <!-- Informations utilisateur dans le header -->
+            <div id="header-user-info" class="mt-2 hidden">
+                <div class="text-xs text-slate-500 dark:text-slate-400 flex items-center gap-2">
+                    <span id="header-user-role" class="font-medium">Utilisateur</span>
+                    <span>•</span>
+                    <span id="header-user-name">Non connecté</span>
+                </div>
+            </div>
         </div>
     </header>
     
@@ -476,18 +486,11 @@
             <!-- Header du chat -->
             <div class="bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-t-lg p-2 md:p-4 shadow-sm">
                 <div class="flex justify-between items-center">
-                    <div class="flex flex-col">
-                        <h2 class="text-lg font-semibold text-slate-900 dark:text-slate-100 flex items-center gap-2">
-                            <span class="hidden md:inline">Conversation</span>
-                            <span id="chat-peer-name-mobile" class="md:hidden">Conversation</span>
-                            <span id="connection-status" class="text-sm transition-all duration-300" title="Statut de connexion">🔴</span>
-                        </h2>
-                        <div class="text-xs text-slate-500 dark:text-slate-400 flex items-center gap-2">
-                            <span id="user-role" class="font-medium">Utilisateur</span>
-                            <span>•</span>
-                            <span id="user-name">Non connecté</span>
-                        </div>
-                    </div>
+                    <h2 class="text-lg font-semibold text-slate-900 dark:text-slate-100 flex items-center gap-2">
+                        <span class="hidden md:inline">Conversation</span>
+                        <span id="chat-peer-name-mobile" class="md:hidden">Conversation</span>
+                        <span id="connection-status" class="text-sm transition-all duration-300" title="Statut de connexion">🔴</span>
+                    </h2>
                     <button id="disconnect-btn" class="px-3 py-1 md:px-4 md:py-2 bg-slate-200 dark:bg-slate-700 text-slate-900 dark:text-slate-100 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-600 transition-colors text-sm">
                         Déconnecter
                     </button>
