Feature v2.36.0: Indicateur 'en train d'écrire' + statut connexion dans onglet navigateur

--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
                         <span class="hidden md:inline">Conversation</span>
                         <span id="chat-peer-name-mobile" class="md:hidden">Conversation</span>
                         <span id="connection-status" class="text-sm transition-all duration-300" title="Statut de connexion">🔴</span>
+                        <span id="typing-indicator-title" class="hidden text-sm text-slate-500 dark:text-slate-400 italic">en train d'écrire...</span>
                     </h2>
                     <div class="flex gap-2">
                         <button id="copy-link-btn" class="hidden px-3 py-1 md:px-4 md:py-2 bg-primary-600 dark:bg-primary-700 text-white border border-primary-600 dark:border-primary-700 rounded-md hover:bg-primary-700 dark:hover:bg-primary-800 transition-colors text-sm" title="Copier le lien de connexion">
