Feature v2.38.0: Bouton partage historique + correction titre onglet (nom correspondant)

--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@
                         <button id="copy-link-btn" class="hidden px-3 py-1 md:px-4 md:py-2 bg-primary-600 dark:bg-primary-700 text-white border border-primary-600 dark:border-primary-700 rounded-md hover:bg-primary-700 dark:hover:bg-primary-800 transition-colors text-sm" title="Copier le lien de connexion">
                             📋 Lien
                         </button>
+                        <button id="share-history-btn" class="hidden px-3 py-1 md:px-4 md:py-2 bg-amber-600 dark:bg-amber-700 text-white border border-amber-600 dark:border-amber-700 rounded-md hover:bg-amber-700 dark:hover:bg-amber-800 transition-colors text-sm" title="Partager l'historique de conversation">
+                            📤 Historique
+                        </button>
                         <button id="disconnect-btn" class="px-3 py-1 md:px-4 md:py-2 bg-slate-200 dark:bg-slate-700 text-slate-900 dark:text-slate-100 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-600 transition-colors text-sm">
                             Déconnecter
                         </button>
