UI v2.39.0: Header compact + icônes SVG + interface simplifiée + fix erreur JS

--- a/index.html
+++ b/index.html
@@ -386,7 +386,11 @@
         <div class="max-w-4xl mx-auto px-4 py-6">
             <div class="flex items-center gap-6">
                 <h1 class="text-2xl font-semibold text-primary-800 dark:text-primary-400">QChat</h1>
-                <span class="text-sm text-slate-600 dark:text-slate-400 hidden sm:inline">Communication P2P sécurisée</span>
+                <div class="text-sm text-slate-600 dark:text-slate-400 hidden sm:flex items-center gap-2" id="header-user-info-inline">
+                    <span id="header-user-role-inline" class="font-medium">Utilisateur</span>
+                    <span>•</span>
+                    <span id="header-user-name-inline">Non connecté</span>
+                </div>
                 <div class="ml-auto flex items-center gap-2">
                 <button id="sound-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Sons">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
@@ -400,14 +404,6 @@
                 </button>
                 </div>
             </div>
-            <!-- Informations utilisateur dans le header -->
-            <div id="header-user-info" class="mt-2 hidden">
-                <div class="text-xs text-slate-500 dark:text-slate-400 flex items-center gap-2">
-                    <span id="header-user-role" class="font-medium">Utilisateur</span>
-                    <span>•</span>
-                    <span id="header-user-name">Non connecté</span>
-                </div>
-    </div>
         </div>
     </header>
     
@@ -424,7 +420,6 @@
                 
                 <div class="max-w-md mx-auto space-y-4">
                     <div>
-                        <label for="username-input" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">Votre nom</label>
                         <input type="text" id="username-input" class="w-full p-3 border border-slate-200 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-900 text-slate-900 dark:text-slate-100 text-base focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition-all min-h-[48px]" placeholder="Entrez votre nom..." maxlength="30">
                     </div>
                     <div id="recipient-field" class="hidden">
